--- a/scss/pikaday.scss
+++ b/scss/pikaday.scss
@@ -51,24 +51,12 @@ $pd-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
     }
 }
 
-// clear child float (pika-lendar), using the famous micro clearfix hack
-// http://nicolasgallagher.com/micro-clearfix-hack/
-.pika-single {
-    *zoom: 1;
-
-    &:before,
-    &:after {
-        content: " ";
-        display: table;
-    }
-
-    &:after { clear: both }
-}
 
 .pika-lendar {
-    float: left;
+    display: inline-block;
     width: 240px;
     margin: 8px;
+    vertical-align: middle;
 }
 
 .pika-title {
